fixed modal overlap

--- a/src/IntroModal/Modal.css
+++ b/src/IntroModal/Modal.css
@@ -32,6 +32,7 @@
     .modalContainer {
         max-width: 80%;
         max-height: 70%;
+        top: 50%
 
     }
 }
